--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     compile 'org.apache.httpcomponents:httpmime:4.3.6'
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
     provided 'com.google.android.things:androidthings:0.4.1-devpreview'
 }
 
