--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+        }
     }
 
     dependencies {
