--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.wang.avi:library:2.1.3'
     compile 'com.google.android.things.contrib:driver-button:0.3'
     compile 'org.tensorflow:tensorflow-android:1.2.0'
     //compile 'com.google.firebase:firebase-storage:10.2.6'
