--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'de.undercouch.download'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     lintOptions {
         abortOnError false
@@ -66,18 +66,18 @@ repositories {
 }
 
 dependencies {
-    compile 'com.wang.avi:library:2.1.3'
     compile 'com.google.android.things.contrib:driver-button:0.3'
     compile 'org.tensorflow:tensorflow-android:1.2.0'
     //compile 'com.google.firebase:firebase-storage:10.2.6'
     compile 'com.google.firebase:firebase-core:11.0.1'
     compile 'com.google.firebase:firebase-storage:11.0.1'
     compile 'com.google.firebase:firebase-auth:11.0.1'
-    compile 'org.apache.httpcomponents:httpcore:4.4.1'
-    compile 'org.apache.httpcomponents:httpclient:4.5'
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    compile 'org.apache.httpcomponents:httpcore:4.4.4'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
     compile 'org.apache.httpcomponents:httpmime:4.3.6'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+    //compile 'com.wang.avi:library:2.1.3'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     provided 'com.google.android.things:androidthings:0.4.1-devpreview'
 }
 
